<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_taskminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv_lista"
        android:layout_width="396dp"
        android:layout_height="527dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:backgroundTint="@color/purple_200"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintBottom_toTopOf="@+id/lv_lista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_lista"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_add"
            android:layout_width="132dp"
            android:layout_height="41dp"
            android:text="@string/bt_add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>